--- a/sass/global-vars/global-vars.sass
+++ b/sass/global-vars/global-vars.sass
@@ -5,6 +5,7 @@ $theme-color-dark: #075587
 $theme-complement-color: #FFC984
 $theme-complement-color-light: #49D692
 $theme-complement-color-bright: #FFB85B
+$theme-complement-color-green: #5DBE00
 // #FF9409
 
 
@@ -13,6 +14,9 @@ $theme-complement-color-bright: #FFB85B
 
 .theme-color
     color: $theme-color
+
+.theme-color-green
+    color: $theme-complement-color-green
 
 .float-left
     float: left
