--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,3 +4,4 @@
 @import 'sub-header-info/sub-header-info'
 @import 'content-section-1/content-section-1'
 @import 'call-to-action/call-to-action'
+@import 'popular-tools/popular-tools'
