--- a/sass/content-section-1/content-section-1.sass
+++ b/sass/content-section-1/content-section-1.sass
@@ -5,6 +5,32 @@
     .content-global-row
         padding-top: 2em
 
+        .news-post
+            margin-bottom: 2em
+
+            &:hover
+                background-color: #f5f5f5
+                h5
+                    color: $theme-color
+
+                .news-post-inner
+                    a
+                        color: $theme-complement-color-green
+
+            &:last-of-type
+                margin-bottom: 0
+
+            .news-post-inner
+                padding-bottom: 1em
+                border-bottom: 1px solid $theme-complement-color
+                h5
+                    text-transform: uppercase
+
+                a
+                    color: $theme-color
+                    text-decoration: none
+
+
     .img-holder
         margin: auto
         padding: 2em
@@ -20,7 +46,7 @@
         margin-bottom: 1.5em
 
     p
-        margin-bottom: 1.5em
+        margin-bottom: 1sem
 
 .section-border
     border-top: 1px solid #e7e7e7
@@ -73,4 +99,5 @@
 
 @media only screen and (max-width: 991px)
     .department-list
-        margin-top: 3em
+        display: none
+        //margin-top: 3em
