--- a/sass/popular-tools/popular-tools.sass
+++ b/sass/popular-tools/popular-tools.sass
@@ -3,6 +3,10 @@
     padding-bottom: 2em
     margin-bottom: 3em
 
+    h3
+        text-transform: uppercase
+        margin-bottom: 1em
+
 
     .pop-tool-block
         position: relative
