--- a/sass/popular-tools/popular-tools.sass
+++ b/sass/popular-tools/popular-tools.sass
@@ -1,11 +1,18 @@
 .popular-tools
     background-color: #e7e7e7
+    padding-top: 1em
     padding-bottom: 2em
     margin-bottom: 3em
 
     h3
         text-transform: uppercase
         margin-bottom: 1em
+
+        a
+            text-decoration: none
+            color: inherit
+            &:hover
+                color: $theme-complement-color-green
 
 
     .pop-tool-block
