--- a/css/style.css
+++ b/css/style.css
@@ -114,16 +114,17 @@
       margin-bottom: 2em; }
       .content-section-1 .content-global-row .news-post:hover {
         background-color: #f5f5f5; }
-        .content-section-1 .content-global-row .news-post:hover h5 {
-          color: #2E86C1; }
+        .content-section-1 .content-global-row .news-post:hover .news-post-inner h5 {
+          color: #5DBE00; }
         .content-section-1 .content-global-row .news-post:hover .news-post-inner a {
           color: #5DBE00; }
       .content-section-1 .content-global-row .news-post:last-of-type {
         margin-bottom: 0; }
       .content-section-1 .content-global-row .news-post .news-post-inner {
         padding-bottom: 1em;
-        border-bottom: 1px solid #FFC984; }
+        border-bottom: 1px solid #ddd; }
         .content-section-1 .content-global-row .news-post .news-post-inner h5 {
+          color: #2E86C1;
           text-transform: uppercase; }
         .content-section-1 .content-global-row .news-post .news-post-inner a {
           color: #2E86C1;
@@ -136,6 +137,11 @@
   .content-section-1 h3 {
     text-transform: uppercase;
     margin-bottom: 1em; }
+    .content-section-1 h3 a {
+      text-decoration: none;
+      color: inherit; }
+      .content-section-1 h3 a:hover {
+        color: #5DBE00; }
   .content-section-1 h5 {
     font-weight: bold;
     margin-bottom: 1.5em; }
@@ -164,6 +170,7 @@
     background-color: #4F9DCF;
     border-bottom: 1px solid #e7e7e7; }
     .department-list li.department-list-header h4 {
+      font-weight: bold;
       margin: 0;
       color: #FFC984;
       text-transform: uppercase; }
@@ -215,11 +222,17 @@
     margin-top: 1em; } }
 .popular-tools {
   background-color: #e7e7e7;
+  padding-top: 1em;
   padding-bottom: 2em;
   margin-bottom: 3em; }
   .popular-tools h3 {
     text-transform: uppercase;
     margin-bottom: 1em; }
+    .popular-tools h3 a {
+      text-decoration: none;
+      color: inherit; }
+      .popular-tools h3 a:hover {
+        color: #5DBE00; }
   .popular-tools .pop-tool-block {
     position: relative;
     width: 100%;
