added upcomming evetns section

--- a/sass/global-vars/global-vars.sass
+++ b/sass/global-vars/global-vars.sass
@@ -1,5 +1,6 @@
 $theme-color: #2E86C1
 $theme-color-light: #4F9DCF
+$theme-color-ultra-light: #CDE4F3
 $theme-color-light-alt: #D6EAF8
 $theme-color-dark: #075587
 $theme-complement-color: #FFC984
