--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,3 +5,4 @@
 @import 'content-section-1/content-section-1'
 @import 'call-to-action/call-to-action'
 @import 'popular-tools/popular-tools'
+@import 'upcomming-events/upcomming-events'
