--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,8 @@
     display: none; } }
 .call-to-action .jumbotron {
   background: #FFB85B;
-  padding: 2em; }
+  padding: 2em;
+  margin-bottom: 3em; }
   .call-to-action .jumbotron h3 {
     margin: 0;
     color: #075587;
@@ -254,5 +255,62 @@
       font-size: 2em;
       font-weight: bold;
       text-align: center; }
+
+.upcomming-events-section {
+  background-color: #CDE4F3;
+  margin-bottom: 3em;
+  padding-bottom: 3em; }
+  .upcomming-events-section h3 {
+    text-transform: uppercase;
+    margin-top: 1em;
+    margin-bottom: 1em; }
+    .upcomming-events-section h3 a {
+      text-decoration: none;
+      color: inherit; }
+      .upcomming-events-section h3 a:hover {
+        color: #5DBE00; }
+  .upcomming-events-section .cal-bg-wrap {
+    background-color: #EEF6FB;
+    padding: 15px;
+    border-radius: 3px;
+    margin-bottom: 1em; }
+  .upcomming-events-section .cal-month-header h4 {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold; }
+  .upcomming-events-section .date-event-wrap {
+    padding: 8px;
+    border-radius: 5px;
+    background-color: #fff;
+    margin-bottom: 1em; }
+    .upcomming-events-section .date-event-wrap:hover {
+      box-shadow: 0 0 3px #ccc; }
+  .upcomming-events-section .date-holder {
+    position: relative;
+    background-color: #5DBE00;
+    width: 90px;
+    padding-bottom: 90px;
+    margin-right: 1em;
+    border-radius: 50%; }
+    .upcomming-events-section .date-holder .date-holder-inner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%) translateY(-50%);
+      text-align: center;
+      color: #fff; }
+      .upcomming-events-section .date-holder .date-holder-inner p {
+        padding: 0;
+        margin: 0;
+        line-height: 1;
+        font-weight: bold; }
+      .upcomming-events-section .date-holder .date-holder-inner .date-num {
+        font-size: 2em; }
+      .upcomming-events-section .date-holder .date-holder-inner .date-month {
+        font-size: 1.5em; }
+  .upcomming-events-section .event-info h5 {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #2E86C1; }
 
 /*# sourceMappingURL=style.css.map */
