--- a/sass/call-to-action/call-to-action.sass
+++ b/sass/call-to-action/call-to-action.sass
@@ -3,6 +3,7 @@
     .jumbotron
         background: $theme-complement-color-bright
         padding: 2em
+        margin-bottom: 3em
 
         h3
             margin: 0
