--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@
   border-radius: 0;
   border: 0;
   margin-bottom: 0;
-  border-bottom: 1px solid #e7e7e7; }
+  border-bottom: 2px solid #FFC984; }
 
 .navbar-default .navbar-brand {
   color: #fff;
