--- a/sass/header-nav/header-nav.sass
+++ b/sass/header-nav/header-nav.sass
@@ -3,7 +3,7 @@
     border-radius: 0
     border: 0
     margin-bottom: 0
-    border-bottom: 1px solid #e7e7e7
+    border-bottom: 2px solid $theme-complement-color
     //box-shadow: 0 2px 5px #5f5f5f
 
 .navbar-default .navbar-brand
