--- a/sass/content-section-1/content-section-1.sass
+++ b/sass/content-section-1/content-section-1.sass
@@ -31,6 +31,12 @@
                     color: $theme-color
                     text-decoration: none
 
+    .news-post-img-thumb
+        float: left
+        max-width: 125px
+        margin-right: 1em
+        margin-bottom: .5em
+
 
     .img-holder
         margin: auto
