--- a/sass/upcomming-events/upcomming-events.sass
+++ b/sass/upcomming-events/upcomming-events.sass
@@ -1,6 +1,6 @@
 .upcomming-events-section
     background-color: $theme-color-ultra-light
-    margin-bottom: 3em
+    //margin-bottom: 3em
     padding-bottom: 3em
 
     h3
