--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,6 @@
 
 .upcomming-events-section {
   background-color: #CDE4F3;
-  margin-bottom: 3em;
   padding-bottom: 3em; }
   .upcomming-events-section h3 {
     text-transform: uppercase;
@@ -317,5 +316,37 @@
     text-transform: uppercase;
     font-weight: bold;
     color: #2E86C1; }
+
+footer {
+  background-color: #2E86C1;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  color: #fff; }
+  footer .footer-container {
+    padding-left: 6em;
+    padding-right: 6em; }
+  footer .footer-info-block {
+    margin-bottom: 2em; }
+  footer h6 {
+    text-transform: uppercase;
+    margin: 0;
+    margin-bottom: 0.25em;
+    padding: 0;
+    font-weight: bold; }
+  footer p {
+    margin: 0;
+    padding: 0;
+    font-size: 0.8em; }
+  footer a {
+    color: inherit;
+    text-decoration: none;
+    font-size: inherit; }
+    footer a:hover {
+      text-decoration: none;
+      color: #FFC984; }
+
+@media only screen and (max-width: 767px) {
+  footer {
+    text-align: center; } }
 
 /*# sourceMappingURL=style.css.map */
