--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,3 +6,4 @@
 @import 'call-to-action/call-to-action'
 @import 'popular-tools/popular-tools'
 @import 'upcomming-events/upcomming-events'
+@import 'footer/footer'
